# mistral

./: .gitignore  README.md  README_novo.md  example_usage.md  mistral.py  mistral_cl.py  mistral_core.py  mistral_gui.py  mistral_mcp_server.py  mistral_utils.py  pyproject.toml  readme.md  requirements.txt  sample.env  sample.md  test_mcp_server.py
reports/: activity_log.json
sample/: sample.md
src/mistral_ocr_mcp/: mistral_cl.py  mistral_core.py  mistral_gui.py  mistral_mcp_server.py  mistral_utils.py
