[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mistral-ocr-mcp"
version = "0.1.0"
description = "Mistral PDF OCR MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "mistralai>=1.0.0",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
gui = ["nicegui>=1.4.0"]
cli = ["click>=8.0.0"]

[project.scripts]
mistral-ocr-mcp = "mistral_ocr_mcp.mistral_mcp_server:main_sync"
mistral-ocr-cli = "mistral_ocr_mcp.mistral_cl:main"
mistral-ocr-gui = "mistral_ocr_mcp.mistral_gui:main"
